syntax = "proto3";

package wg.cosmo.notifications;

enum PlatformEventName {
  USER_REGISTER_SUCCESS = 0;
  APOLLO_MIGRATE_INIT = 1;
  APOLLO_MIGRATE_SUCCESS = 2;
  USER_DELETE_SUCCESS = 3;
}

enum OrganizationEventName {
  FEDERATED_GRAPH_SCHEMA_UPDATED = 0;
  MONOGRAPH_SCHEMA_UPDATED = 1;
  VALIDATE_CONFIG = 3;
  PROPOSAL_STATE_UPDATED = 4;
}

message GraphSchemaUpdatedMeta {
  repeated string graphIds = 1;
}

message ProposalStateUpdatedMeta {
  repeated string graphIds = 1;
}

message EventMeta {
  OrganizationEventName event_name = 1;
  oneof meta {
    GraphSchemaUpdatedMeta federated_graph_schema_updated = 2;
    GraphSchemaUpdatedMeta monograph_schema_updated = 3;
    ProposalStateUpdatedMeta proposal_state_updated = 4;
  }
}